kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: self-service-buckets
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: self-service-buckets
  template:
    metadata:
      labels:
        app.kubernetes.io/name: self-service-buckets
    spec:
      containers:
        - name: self-service-buckets
          image: ${CONTAINER_IMAGE_TAGGED}
          resources: {}
      imagePullSecrets:
        - name: ecr-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: self-service-buckets
spec:
  ports:
    - port: 3000
  selector:
    app.kubernetes.io/name: self-service-buckets
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: self-service-buckets
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Self-Service Suite
    gethomepage.dev/name: Self-service Buckets
    gethomepage.dev/description: Allows users to create S3 buckets on their own
    gethomepage.dev/icon: https://gitlab.jtektrnd.net/uploads/-/system/project/avatar/4003/self-service-buckets.png

spec:
  rules:
    - host: self-service-buckets.ssc.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: self-service-buckets
                port:
                  number: 3000
    - host: self-service-buckets.public.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: self-service-buckets
                port:
                  number: 3000
